[package]
name = "wa-bot"
version = "0.1.0"
authors = ["allemanfredi <alle.manfredi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.105", features = ["derive"] }